# surmado-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
client/surmado/: __init__.py  client.py
client/tests/: test_client.py  test_examples.py
examples/: quickstart.py
integrations/: README.md  make.md  n8n.md  webhooks.md  zapier.md
schemas/: error_response.json  report_creation_response.json  report_status_response.json  scan_request.json  signal_request.json  solutions_request.json  webhook_payload.json
surmado/: __init__.py  client.py
tests/: test_client.py
