[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surmado"
version = "0.1.1"
description = "Official Python client for Surmado's AI visibility testing and SEO reports"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Surmado Engineering", email = "engineering@surmado.com" },
]
keywords = [
    "surmado",
    "seo",
    "ai",
    "marketing",
    "visibility",
    "analytics",
    "llm",
    "chatgpt",
    "perplexity",
    "geo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://surmado.com"
Documentation = "https://help.surmado.com/docs/api-reference/"
Repository = "https://github.com/surmado/surmado-python"
Issues = "https://github.com/surmado/surmado-python/issues"
Changelog = "https://github.com/surmado/surmado-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/surmado",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["surmado"]

